--- a/encriptadorChallenge/newstyle.css
+++ b/encriptadorChallenge/newstyle.css
@@ -1,6 +1,6 @@
 body{
     position: absolute;
-    width: 100%,
+    width: 100%;
     height: 100vh;
     margin: 0;
     background: #c8d2f7;
@@ -59,3 +59,14 @@ body{
     order: 1;
     flex-grow: 0;
 }
+
+.ingreso-texto{
+    position: absolute;
+    width: 60%;
+    font-weight: 400;
+    font-size: 32px;
+    border: 3px solid #c8d2f7;
+    background-color: #c8d2f7;
+    color: #0A3871;
+}
+
